--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>RobotLanguage</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Heading</h1>
+    <h1>JSONPlaceholder</h1>
+    <button onclick="getData();">Get Data</button>
+    <ul>
+      
+    </ul>
     <script src="index.js"></script>
   </body>
 </html>
